# grd_generator

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
data/reference_reports/0000/: report.json
data/reference_reports/0001/: report.json
docs/: pattern_reference_values.json
docs/superpowers/plans/: 2026-06-19-calibration.md  2026-06-19-grd-generator.md  2026-06-22-gui.md  2026-06-25-array-fed-reflector.md  2026-07-20-reflector-default.md
docs/superpowers/specs/: 2026-06-19-calibration-design.md  2026-06-19-grd-generator-design.md  2026-06-22-gui-design.md  2026-06-22-visualization-design.md  2026-06-25-array-fed-reflector-design.md  2026-07-20-reflector-default-design.md
src/grd_generator/: __init__.py  calibrate.py  generate.py  geometry.py  gui.py  logger.py  plot.py  report_ingest.py  scenario.py  schemas.py  synth.py
src/grd_generator/examples/: example_calibration.py  example_generation.py  example_gui.py  example_plot.py  example_reflector_roundtrip.py
src/grd_generator/reflector/: __init__.py  farfield.py  generate_afr.py  grd_export.py  optics.py  spec.py  synth_afr.py  zone.py
src/grd_generator/tests/: test_calibrate.py  test_example_calibration.py  test_example_generation.py  test_example_gui.py  test_example_plot.py  test_example_reflector_roundtrip.py  test_form_beam.py  test_generate.py  test_generate_afr.py  test_geometry.py  test_grd_export.py  test_gui.py  test_logger.py  test_plot_contours.py  test_plot_zone.py  test_reflector_farfield.py  test_reflector_optics.py  test_reflector_spec.py  test_reflector_zone.py  test_report_ingest.py  test_scenario.py  test_schemas.py  test_synth.py  test_synth_afr.py
