[project]
name = "grd_generator"
version = "0.1.0"
description = "Générateur autonome du jeu de référence de diagrammes de rayonnement d'antenne (.npz)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.9",  # rendu des diagrammes (script plot.py, extra optionnel)
    "pyqt6>=6.7",  # backend QtAgg → fenêtre native pour grd-plot (auto-sélectionné si DISPLAY)
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
grd-generate = "grd_generator.generate:main"
grd-calibrate = "grd_generator.calibrate:main"
grd-plot = "grd_generator.plot:main"
grd-gui = "grd_generator.gui:main"
grd-generate-afr = "grd_generator.reflector.generate_afr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grd_generator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# matplotlib (extra viz) n'a pas de stubs : le rendu (plot.py, hors couverture)
# est vérifié au mieux sans typage de la lib graphique.
[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

# PyQt6 : subclassing QMainWindow (Any sans stubs complets) toléré dans gui.py seul.
[[tool.mypy.overrides]]
module = ["PyQt6.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "grd_generator.gui"
disallow_subclassing_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
addopts = "-q --import-mode=importlib --cov=src/grd_generator --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/grd_generator"]
branch = true
omit = [
    "*/grd_generator/generate.py",                      # script offline : orchestration + écriture .npz
    "*/grd_generator/calibrate.py",                     # script offline : sampling + écriture .npz + CLI
    "*/grd_generator/plot.py",                          # rendu matplotlib : effets de bord graphiques
    "*/grd_generator/gui.py",                           # application Qt : effets de bord interface
    "*/grd_generator/reflector/generate_afr.py",        # script offline AFR : orchestration + écriture .npz
    "*/grd_generator/examples/*",                       # scripts d'exemple : testés en lancement
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
exclude_also = ["if __name__ == .__main__.:"]
